--- a/wpf-clock-app/MainWindow.xaml
+++ b/wpf-clock-app/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:wpf_clock_app"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="時計アプリ" Height="250" Width="800" ResizeMode="CanResizeWithGrip" ShowInTaskbar="False" Topmost="True">
     <Grid>
-        
+        <Viewbox>
+            <TextBlock x:Name="textBlock" Text="00:00:00"/>
+        </Viewbox>
+
     </Grid>
 </Window>
